[package]
name = "libtock_buzzer"
version = "0.1.0"
authors = [
    "Marinache Andrei-Alexandru <andrei.marinache02@stud.acs.upb.ro>",
]
license = "MIT/Apache-2.0"
edition = "2022"
repository = "https://www.github.com/tock/libtock-rs"
description = "libtock buzzer api"

[dependencies]
libtock_platform = { path = "../../platform" }

[dev-dependencies]
libtock_unittest = { path = "../../unittest" }
